...
    <string name="temperature_unit_celsius">°C</string>
    <string name="temperature_unit_fahrenheit">°F</string>
    <string name="light_unit">lx</string>
    <string name="co2_unit">ppm</string>
    <string name="humidity_unit">mg/L</string>
    <string name="action_search">Search</string>
    <string name="action_manage_accounts">Manage accounts</string>
    <string name="action_settings">Settings</string>
    <string name="register_account">Register account</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="hint_email">Email *</string>
    <string name="hint_password">Password *</string>
...
    <string name="capacity">Capacity :</string>
    <string name="description_room">Description :</string>
    <string name="no_description">No description…</string>
    <string name="edit">Edit</string>
    <string name="artworks">Artworks</string>
    <string name="logo">Logo</string>
    <string name="title">Museum name</string>
    <string name="pref_notification_label">Notifications for artwork deviations</string>
    <string name="pref_notification_sum_off">Turned off</string>
    <string name="pref_notification_sum_on">Turned on</string>
    <string name="position12">12</string>
    <string name="position11">11</string>
    <string name="position10">10</string>
...
